// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons Documentation 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Click the button at top-right to view the info
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Buttons
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Documentation
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            Generic HTML button
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                Click the button at top-right to view the info
              </span>
            </div>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons Standard button 1`] = `
<button
  className="btn"
  onClick={[Function]}
>
  Click Me
</button>
`;

exports[`Storyshots Forms Disabled Input 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="includes"
  >
    Includes
  </label>
  <input
    className="form-control"
    disabled={true}
    id="includes"
    type="text"
  />
</div>
`;

exports[`Storyshots Forms Documentation 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Click the button at top-right to view the info
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Forms
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Documentation
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            Generic HTML list
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                Click the button at top-right to view the info
              </span>
            </div>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms Input 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="includes"
  >
    Includes
  </label>
  <input
    className="form-control"
    id="includes"
    onChange={[Function]}
    type="text"
  />
</div>
`;

exports[`Storyshots Lists Documentation 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Click the button at top-right to view the info
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Lists
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Documentation
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            Generic HTML list
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                Click the button at top-right to view the info
              </span>
            </div>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Lists Grid List 1`] = `
<ul
  className="list-group"
>
  <li
    className="pull-left"
  >
    <p
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "25%",
        }
      }
    >
      <span
        className="text-large"
      >
        keyOne
      </span>
      <br />
      <span
        className="text-muted"
      >
        Item one
      </span>
    </p>
    <p
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "25%",
        }
      }
    >
      <span
        className="text-large"
      >
        keyThree
      </span>
      <br />
      <span
        className="text-muted"
      >
        Item one y
      </span>
    </p>
  </li>
  <li
    className="pull-left"
  >
    <p
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "25%",
        }
      }
    >
      <span
        className="text-large"
      >
        keyOne
      </span>
      <br />
      <span
        className="text-muted"
      >
        Item two
      </span>
    </p>
    <p
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "25%",
        }
      }
    >
      <span
        className="text-large"
      >
        keyThree
      </span>
      <br />
      <span
        className="text-muted"
      >
        Item two y
      </span>
    </p>
  </li>
</ul>
`;

exports[`Storyshots Lists Grid List Wireframe 1`] = `
<ul
  className="list-group wireframe-container"
>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-10px",
        "zIndex": 100,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-20px",
        "zIndex": 99,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-30px",
        "zIndex": 98,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-40px",
        "zIndex": 97,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-50px",
        "zIndex": 96,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-60px",
        "zIndex": 95,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-70px",
        "zIndex": 94,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-80px",
        "zIndex": 93,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-90px",
        "zIndex": 92,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
  <li
    className="pull-left fade-in"
    style={
      Object {
        "marginTop": "-100px",
        "zIndex": 91,
      }
    }
  >
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
    <div
      className="pull-left"
      style={
        Object {
          "marginBottom": "15px",
          "width": "20%",
        }
      }
    >
      <div
        className="wireframe"
      />
      <div
        className="wireframe w-small"
      />
    </div>
  </li>
</ul>
`;

exports[`Storyshots Lists Simple List 1`] = `
<ul
  className="list-group"
>
  <li>
    Item one
  </li>
  <li>
    Item two
  </li>
  <li>
    Item three
  </li>
</ul>
`;

exports[`Storyshots Loaders Documentation 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Click the button at top-right to view the info
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Loaders
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Documentation
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            Generic HTML loader
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                Click the button at top-right to view the info
              </span>
            </div>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Loaders Simple Loader 1`] = `
Array [
  <h1
    className="text-center heading marginT20"
  >
    Just a tick...
  </h1>,
  <div
    className="loading-spinner"
  />,
]
`;

exports[`Storyshots Loaders Skeleton Loader 1`] = `
Array [
  <ul
    className="list-group wireframe-container"
  >
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-10px",
          "zIndex": 100,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-20px",
          "zIndex": 99,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-30px",
          "zIndex": 98,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-40px",
          "zIndex": 97,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-50px",
          "zIndex": 96,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-60px",
          "zIndex": 95,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-70px",
          "zIndex": 94,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-80px",
          "zIndex": 93,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-90px",
          "zIndex": 92,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
    <li
      className="pull-left fade-in"
      style={
        Object {
          "marginTop": "-100px",
          "zIndex": 91,
        }
      }
    >
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
      <div
        className="pull-left"
        style={
          Object {
            "marginBottom": "15px",
            "width": "20%",
          }
        }
      >
        <div
          className="wireframe"
        />
        <div
          className="wireframe w-small"
        />
      </div>
    </li>
  </ul>,
  <br />,
  <div
    className="loading-spinner"
  />,
]
`;
